--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -234,8 +234,8 @@
   "Tokens to issue (optional)": "Auszugebende Token (optional)",
   "Gas": "Gas",
   "Review": "Überprüfen",
-  "Invalid address group for the WallectConnect connection": "Invalide Adressgruppe für die WallectConnect Verbindung",
-  "Error in pairing": "Fehler beim Pairing",
+  "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})",
+  "Could not pair with WalletConnect": "Could not pair with WalletConnect",
   "WalletConnect error": "WalletConnect Fehler",
   "Try again": "Versuchen Sie es erneut",
   "Connect to a dApp": "Verbinden zu einer dApp",
@@ -244,7 +244,6 @@
   "Approve the proposal to connect": "Genehmigen Sie den Vorschlag zur Verbindung",
   "Please review the following before authorizing the dApp": "Bitte überprüfen Sie Folgendes, bevor Sie die dApp autorisieren",
   "Name": "Name",
-  "URL": "URL",
   "Discover active addresses": "Discover active addresses",
   "Scan the blockchain for addresses you used in the past.": "Scan the blockchain for addresses you used in the past.",
   "Search": "Search",
