--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -234,8 +234,8 @@
   "Tokens to issue (optional)": "Tokens à créer (optionnel)",
   "Gas": "Gas",
   "Review": "Vérification",
-  "Invalid address group for the WallectConnect connection": "Groupe de l’adresse invalide pour la connection WalletConnect",
-  "Error in pairing": "Erreur lors du jumelage",
+  "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})",
+  "Could not pair with WalletConnect": "Could not pair with WalletConnect",
   "WalletConnect error": "Erreur WalletConnect",
   "Try again": "Essayez de nouveau",
   "Connect to a dApp": "Se connecter à une dApp",
@@ -244,7 +244,6 @@
   "Approve the proposal to connect": "Approuvez la proposition de connexion",
   "Please review the following before authorizing the dApp": "Passez en revue les paramètres suivants avant d’autoriser la dApp",
   "Name": "Nom",
-  "URL": "URL",
   "Description": "Description",
   "Network ID": "ID du réseau",
   "Address group": "Groupe de l’adresse",
