--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -243,8 +243,8 @@
   "Tokens to issue (optional)": "Tokens a emitir (opcional)",
   "Gas": "Gas",
   "Review": "Rever",
-  "Invalid address group for the WallectConnect connection": "Grupo de endereços inválidos para a conexão WallectConnect",
-  "Error in pairing": "Erro no emparelhamento",
+  "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})",
+  "Could not pair with WalletConnect": "Could not pair with WalletConnect",
   "WalletConnect error": "Erro da WalletConnect",
   "Try again": "Tente novamente",
   "Connect to a dApp": "Conecte-se a uma dApp",
@@ -253,7 +253,6 @@
   "Approve the proposal to connect": "Aprovar a proposta de conexão",
   "Please review the following before authorizing the dApp": "Por favor, verifique o seguinte antes de autorizar a dApp",
   "Name": "Nome",
-  "URL": "URL",
   "Description": "Descrição",
   "Network ID": "ID da rede",
   "Address group": "Grupo de endereços",
