Improve display of WalletConnect information

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -239,7 +239,7 @@
   "WalletConnect error": "WalletConnect Fehler",
   "Try again": "Versuchen Sie es erneut",
   "Connect to a dApp": "Verbinden zu einer dApp",
-  "Paste what was copied from the dApp": "Fügen Sie ein was von der dApp kopiert wurde",
+  "Paste WalletConnect URI copied from the dApp": "Paste WalletConnect URI copied from the dApp",
   "Connect": "Verbinden",
   "Approve the proposal to connect": "Genehmigen Sie den Vorschlag zur Verbindung",
   "Please review the following before authorizing the dApp": "Bitte überprüfen Sie Folgendes, bevor Sie die dApp autorisieren",
