--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -240,7 +240,7 @@
   "WalletConnect error": "Lỗi WalletConnect",
   "Try again": "Thử lại",
   "Connect to a dApp": "Kết nối đến một dApp",
-  "Paste what was copied from the dApp": "Dán tất cả từ dApp",
+  "Paste WalletConnect URI copied from the dApp": "Paste WalletConnect URI copied from the dApp1",
   "Connect": "Kết nối",
   "Approve the proposal to connect": "Chấp nhận các giải pháp để kết nối",
   "Please review the following before authorizing the dApp": "Vui lòng kiểm tra lại trước khi xác thực dApp",
