--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -248,7 +248,7 @@
   "WalletConnect error": "Erro da WalletConnect",
   "Try again": "Tente novamente",
   "Connect to a dApp": "Conecte-se a uma dApp",
-  "Paste what was copied from the dApp": "Colar o que foi copiado da dApp",
+  "Paste WalletConnect URI copied from the dApp": "Paste WalletConnect URI copied from the dApp",
   "Connect": "Conectar",
   "Approve the proposal to connect": "Aprovar a proposta de conexão",
   "Please review the following before authorizing the dApp": "Por favor, verifique o seguinte antes de autorizar a dApp",
