--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -399,5 +399,9 @@
   "Disconnect": "Disconnect",
   "Current dApp connection details": "Current dApp connection details",
   "More options": "More options",
-  "Set custom network URLs": "Set custom network URLs"
+  "Set custom network URLs": "Set custom network URLs",
+  "Swapped": "Swapped",
+  "between": "between",
+  "and": "and",
+  "with": "with"
 }
