--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -397,5 +397,6 @@
   "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
   "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
   "Disconnect": "Disconnect",
-  "Current dApp connection details": "Current dApp connection details"
+  "Current dApp connection details": "Current dApp connection details",
+  "More options": "More options"
 }
