--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -276,5 +276,6 @@
   "Localhost": "Localhost",
   "Delete": "Удалить",
   "Timestamp": "Временная метка",
-  "Lock time must be in the future.": "Время блокировки должно быть в будущем."
+  "Lock time must be in the future.": "Время блокировки должно быть в будущем.",
+  "More options": "More options"
 }
