Use ToggleSection in NetworkSettings

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -398,5 +398,6 @@
   "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
   "Disconnect": "Disconnect",
   "Current dApp connection details": "Current dApp connection details",
-  "More options": "More options"
+  "More options": "More options",
+  "Set custom network URLs": "Set custom network URLs"
 }
