Fix address badges

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -403,5 +403,6 @@
   "Swapped": "Swapped",
   "between": "between",
   "and": "and",
-  "with": "with"
+  "with": "with",
+  "Copy contact address": "Copy contact address"
 }
