--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -404,5 +404,10 @@
   "between": "between",
   "and": "and",
   "with": "with",
-  "Copy contact address": "Copy contact address"
+  "Copy contact address": "Copy contact address",
+  "🌅 Good morning.": "🌅 Good morning.",
+  "🌞 Good afternoon.": "🌞 Good afternoon.",
+  "🌇 Good evening.": "🌇 Good evening.",
+  "🌝 Good night.": "🌇 Good night.",
+  "ALPH last price: : {{ lastPrice }}": "ALPH last price: : {{ lastPrice }}"
 }
