--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -409,5 +409,5 @@
   "🌞 Good afternoon.": "🌞 Good afternoon.",
   "🌇 Good evening.": "🌇 Good evening.",
   "🌝 Good night.": "🌇 Good night.",
-  "ALPH last price: : {{ lastPrice }}": "ALPH last price: : {{ lastPrice }}"
+  "📈 ALPH price: {{ price }}$": "📈 ALPH price: {{ price }}$"
 }
