--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -266,7 +266,7 @@
   "This is the default address": "This is the default address",
   "Set as the default address": "Set as the default address",
   "Lock wallet": "Lock wallet",
-  "Hide empty addresses": "Hide empty addresses",
+  "Hide empty": "Hide empty",
   "Search for label, a hash or an asset...": "Search for label, a hash or an asset...",
   "Search for name or a hash...": "Search for name or a hash...",
   "New contact": "New contact",
