ShortcutButtons: option to set solid bg, add borders, better hover colors.

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -65,7 +65,7 @@
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Gardez ces mots précieusement ! Ils sont la clé pour accéder et récupérer votre portefeuille.",
   "No recovery phrase was stored along with this wallet": "Aucune phrase de récupération n'a été enregistrée avec ce portefeuille",
   "Expected fee": "Frais estimés",
-  "Select the address to send funds from.": "Sélectionnez l'adresse vers laquelle envoyer les fonds.",
+  "Select the address to send funds from.": "Sélectionnez l'adresse depuis laquelle envoyer les fonds.",
   "Recipient's address": "Adresse du destinataire",
   "Advanced settings": "Paramètres avancés",
   "Gas amount": "Quantité de gaz",
