--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -355,9 +355,9 @@
   "Wallet name updated to: {{ newWalletName }}": "Wallet name updated to: {{ newWalletName }}",
   "Shortcuts": "Shortcuts",
   "More options": "Plus d'options",
-  "🌅 Good morning.": "🌅 Good morning.",
-  "🌞 Good afternoon.": "🌞 Good afternoon.",
-  "🌇 Good evening.": "🌇 Good evening.",
-  "🌝 Good night.": "🌇 Good night.",
-  "📈 ALPH price: {{ price }}$": "📈 ALPH price: {{ price }}$"
+  "Good morning.": "Good morning.",
+  "Good afternoon.": "Good afternoon.",
+  "Good evening.": "Good evening.",
+  "Good night.": "Good night.",
+  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$"
 }
