Full translation in french
And remove mention of mobile sync in the address page for now.

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -252,7 +252,7 @@
   "Type your password to export your wallet.": "Type your password to export your wallet.",
   "Show QR code": "Show QR code",
   "Scan this QR code with your mobile wallet.": "Scan this QR code with your mobile wallet.",
-  "Easily organize your addresses and your contacts for a more serene transfer experience. Sync with the mobile wallet to be more organized on the go.": "Easily organize your addresses and your contacts for a more serene transfer experience. Sync with the mobile wallet to be more organized on the go.",
+  "Easily organize your addresses and your contacts for a more serene transfer experience.": "Easily organize your addresses and your contacts for a more serene transfer experience.",
   "Want to know more? Click here to take a look at our FAQ!": "Want to know more? Click here to take a look at our FAQ!",
   "Addresses & contacts": "Adressen & Kontakte",
   "Contacts": "Kontakte",
