--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -187,7 +187,6 @@
   "Your Wallet": "Ihre Wallet",
   "Your address": "Ihre Adresse",
   "I've copied the words, continue": "Ich habe die Worte kopiert, weiter",
-  "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Fortgeschrittene Funktionen die erfahreneren Benutzern vorbehalten sind. Ein \"normaler\" Benutzer sollte sie nicht sehr oft, wenn überhaupt, verwenden müssen.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Es scheint, dass Ihre Wallet zu viele UTXOs hat, um diese Transaktion senden zu können. Bitte konsolidieren (fusionieren) Sie zunächst Ihre UTXOs. Dies wird eine kleine Gebühr kosten.",
   "Welcome.": "Willkommen.",
   "Welcome back.": "Willkommen zurück.",
@@ -354,5 +353,64 @@
   "Timestamp": "Zeitpunkt",
   "Lock time must be in the future.": "Sperrzeit muss in der Zukunft liegen.",
   "Shortcuts": "Shortcuts",
-  "More options": "More options"
+  "More options": "More options",
+  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
+  "Address name": "Address name",
+  "All selected": "All selected",
+  "Analytics": "Analytics",
+  "Browse and download your transaction history. Execute new transfers easily.": "Browse and download your transaction history. Execute new transfers easily.",
+  "Bytecode": "Bytecode",
+  "Confirm lock time": "Confirm lock time",
+  "Connect to dApp": "Connect to dApp",
+  "Copy contact address": "Copy contact address",
+  "Copy token hash": "Copy token hash",
+  "Current dApp connection details": "Current dApp connection details",
+  "Direction": "Direction",
+  "Directions": "Directions",
+  "Disconnect": "Disconnect",
+  "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
+  "Expand": "Expand",
+  "Export": "Export",
+  "Export address transactions": "Export address transactions",
+  "Good afternoon.": "Good afternoon.",
+  "Good evening.": "Good evening.",
+  "Good morning.": "Good morning.",
+  "Good night.": "Good night.",
+  "Help us improve your experience!": "Help us improve your experience!",
+  "Last 12 months": "Last 12 months",
+  "Last 24h": "Last 24h",
+  "Last 6 months": "Last 6 months",
+  "Last month": "Last month",
+  "Last week": "Last week",
+  "Period": "Period",
+  "Previous year": "Previous year",
+  "Raw amount": "Raw amount",
+  "Reset filters": "Reset filters",
+  "Select a period": "Select a period",
+  "Select address group": "Select address group",
+  "Select addresses": "Select addresses",
+  "Select all": "Select all",
+  "Select assets": "Select assets",
+  "Select directions": "Select directions",
+  "Send locked assets": "Send locked assets",
+  "Set custom network URLs": "Set custom network URLs",
+  "Swapped": "Swapped",
+  "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
+  "This year": "This year",
+  "Time period": "Time period",
+  "Too many chains in the WalletConnect proposal, expected 1, got {{ num }}": "Too many chains in the WalletConnect proposal, expected 1, got {{ num }}",
+  "Unknown token": "Unknown token",
+  "Unknown tokens": "Unknown tokens",
+  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
+  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
+  "Unselect all": "Unselect all",
+  "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
+  "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!",
+  "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
+  "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
+  "and": "and",
+  "between": "between",
+  "lockTimeConfirmation": "You chose to lock the assets until <1>{{ datetime }}</1>. That is approximately <3>{{ inTimeFromNow }}</3> from now. Are you sure you want to lock the assets until then?",
+  "with": "with",
+  "{{ number }} selected": "{{ number }} selected"
 }
