--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -65,7 +65,6 @@
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Anotar cuidadosamente as palavras! Elas são a frase secreta de recuperação da sua carteira.",
   "No recovery phrase was stored along with this wallet": "Nenhuma frase de recuperação foi guardada juntamente com esta carteira",
   "Expected fee": "Taxa prevista",
-  "Address format is incorrect": "O formato do endereço está incorreto",
   "Select the address to send funds from.": "Selecione o endereço de onde pretende enviar os fundos.",
   "Recipient's address": "Endereço do destinatário",
   "Advanced settings": "Configurações avançadas",
@@ -138,10 +137,6 @@
   "Receive": "Receber",
   "To": "Para",
   "Addresses": "Endereços",
-  "Generate new address": "Gerar novo endereço",
-  "Advanced management": "Gestão avançada",
-  "Show operations": "Mostrar operações",
-  "Hide operations": "Ocultar operações",
   "Consolidate (merge) your UTXOs into one.": "Consolidar (fundir) os seus UTXOs num só.",
   "Start": "Começar",
   "Generate one address per group": "Gerar um endereço por grupo",
@@ -154,13 +149,9 @@
   "Refresh data": "Atualizar dados",
   "Alephium Logo": "Logo Alephium",
   "Alephium": "Alephium",
-  "WALLET": "CARTEIRA",
-  "CURRENT WALLET": "CARTEIRA ATUAL",
-  "MENU": "MENU",
   "Overview": "Visão geral",
   "Lock": "Bloquear",
   "Enter password": "Introduza a palavra-chave",
-  "Login": "Iniciar sessão",
   "Security Check": "Verificação de segurança",
   "Alright! Time to check if you got your words right!": "Boa! Está na hora de verificar se as suas palavras estão correctas!",
   "Select the words in the right order. Ready?": "Selecione as palavras na ordem certa. Pronto?",
@@ -196,24 +187,16 @@
   "Your Wallet": "A sua carteira",
   "Your address": "O seu endereço",
   "I've copied the words, continue": "Copiei as palavras, continuar",
-  "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "As operações avançadas são reservadas aos utilizadores mais experientes. Um utilizador \"normal\" não deve precisar de as utilizar com muita frequência, se de todo.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Parece que a sua carteira tem demasiados UTXOs para poder enviar esta transacção. Por favor, consolide (fundir) os seus UTXOs primeiro. Isto irá custar uma pequena taxa.",
-  "Welcome!": "Bem-vindo!",
-  "Welcome back!": "Bem-vindo de novo!",
-  "Please choose a wallet and enter your password to continue.": "Por favor escolha uma carteira e introduza a sua palavra-passe para continuar.",
-  "Create / import a new wallet": "Criar / importar uma nova carteira",
   "(current)": "(atual)",
   "Default address for sending transactions.": "Endereço por defeito para o envio de transações.",
   "Error while fetching data for address {{ hash }}": "Erro ao buscar dados para o endereço {{ hash }}",
   "Error while fetching pending transactions for address {{ hash }}": "Erro ao buscar transações pendentes para o endereço {{ hash }}",
   "Open in explorer": "Abrir no explorador",
-  "Reduce": "Reduza",
-  "Show addresses": "Mostrar endereços",
   "More info": "Mais informação",
   "passphraseWarningMessage": "<0>Esta é uma funcionalidade avançada!</0><br />Utilize-a apenas se souber o que está a fazer.<br />Leia a nossa <5>documentação</5> para saber mais.",
   "welcomeScreenPassphraseMessage": "Se quiser usar uma <1>passphrase</1>, bloqueie a sua carteira recém-criada.",
   "I have read and understood the documentation": "Li e compreendi a documentação",
-  "Use optional passphrase (advanced)": "Usar a frase-chave opcional (avançado)",
   "Confirm passphrase": "Confirmar frase-passe",
   "Passphrases don't match": "As frases-passe não correspondem",
   "Language": "Idioma",
@@ -275,5 +258,159 @@
   "Delete": "Eliminar",
   "Timestamp": "Carimbo da hora",
   "Lock time must be in the future.": "O tempo de bloqueio deve ser no futuro.",
-  "More options": "More options"
+  "More options": "More options",
+  "A contact with this address already exists": "A contact with this address already exists",
+  "A contact with this name already exists": "A contact with this name already exists",
+  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
+  "Add asset": "Add asset",
+  "Address NFTs": "Address NFTs",
+  "Address name": "Address name",
+  "Address tokens": "Address tokens",
+  "Address transactions": "Address transactions",
+  "Addresses & contacts": "Addresses & contacts",
+  "Advanced feature": "Advanced feature",
+  "Advanced operations": "Advanced operations",
+  "All selected": "All selected",
+  "All transactions loaded!": "All transactions loaded!",
+  "Analytics": "Analytics",
+  "Anyone with your private keys can steal any assets held in your addresses.": "Anyone with your private keys can steal any assets held in your addresses.",
+  "Asset": "Asset",
+  "Assets": "Assets",
+  "Browse and download your transaction history. Execute new transfers easily.": "Browse and download your transaction history. Execute new transfers easily.",
+  "Bytecode": "Bytecode",
+  "Change wallet name": "Change wallet name",
+  "Choose a contact": "Choose a contact",
+  "Click on an address to copy its private key.": "Click on an address to copy its private key.",
+  "Coming soon!": "Coming soon!",
+  "Confirm": "Confirm",
+  "Confirm lock time": "Confirm lock time",
+  "Connect to dApp": "Connect to dApp",
+  "Connect wallet to dApp": "Connect wallet to dApp",
+  "Contact saved": "Contact saved",
+  "Contacts": "Contacts",
+  "Copy contact address": "Copy contact address",
+  "Copy private key": "Copy private key",
+  "Copy to clipboard failed": "Copy to clipboard failed",
+  "Copy token hash": "Copy token hash",
+  "Could not copy private key.": "Could not copy private key.",
+  "Could not find a contact with this ID": "Could not find a contact with this ID",
+  "Could not find a contact with this name": "Could not find a contact with this name",
+  "Could not save contact.": "Could not save contact.",
+  "Could not save new wallet name.": "Could not save new wallet name.",
+  "Create contacts to avoid mistakes when sending transactions!": "Create contacts to avoid mistakes when sending transactions!",
+  "Current dApp connection details": "Current dApp connection details",
+  "Developer tools": "Developer tools",
+  "Directions": "Directions",
+  "Disconnect": "Disconnect",
+  "Discover active addresses": "Discover active addresses",
+  "Easily organize your addresses and your contacts for a more serene transfer experience.": "Easily organize your addresses and your contacts for a more serene transfer experience.",
+  "Edit": "Edit",
+  "Edit contact": "Edit contact",
+  "Enable developer tools": "Enable developer tools",
+  "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
+  "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
+  "Enter your password to copy the private key.": "Enter your password to copy the private key.",
+  "Expand": "Expand",
+  "Export": "Export",
+  "Export address transactions": "Export address transactions",
+  "Export current wallet": "Export current wallet",
+  "Export wallet": "Export wallet",
+  "Features for developers only": "Features for developers only",
+  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
+  "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}",
+  "Good afternoon.": "Good afternoon.",
+  "Good evening.": "Good evening.",
+  "Good morning.": "Good morning.",
+  "Good night.": "Good night.",
+  "Help us improve your experience!": "Help us improve your experience!",
+  "Hide empty": "Hide empty",
+  "Import or create a wallet": "Import or create a wallet",
+  "Info": "Info",
+  "Last 12 months": "Last 12 months",
+  "Last 24h": "Last 24h",
+  "Last 6 months": "Last 6 months",
+  "Last activity": "Last activity",
+  "Last month": "Last month",
+  "Last week": "Last week",
+  "Latest transactions": "Latest transactions",
+  "Lock wallet": "Lock wallet",
+  "NFTs": "NFTs",
+  "Never disclose this key.": "Never disclose this key.",
+  "Never used": "Never used",
+  "New contact": "New contact",
+  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page.",
+  "No options match the search criteria.": "No options match the search criteria.",
+  "Open the advanced feature panel.": "Open the advanced feature panel.",
+  "Period": "Period",
+  "Please, backup your secret phrase instead.": "Please, backup your secret phrase instead.",
+  "Previous year": "Previous year",
+  "Private key copied!": "Private key copied!",
+  "Private key export": "Private key export",
+  "Raw amount": "Raw amount",
+  "Reset filters": "Reset filters",
+  "Restart": "Restart",
+  "Scan the blockchain for addresses you used in the past.": "Scan the blockchain for addresses you used in the past.",
+  "Scan this QR code with your mobile wallet.": "Scan this QR code with your mobile wallet.",
+  "Search": "Search",
+  "Search for label, a hash or an asset...": "Search for label, a hash or an asset...",
+  "Search for name or a hash...": "Search for name or a hash...",
+  "See more": "See more",
+  "Select a period": "Select a period",
+  "Select address group": "Select address group",
+  "Select addresses": "Select addresses",
+  "Select all": "Select all",
+  "Select an asset": "Select an asset",
+  "Select assets": "Select assets",
+  "Select directions": "Select directions",
+  "Select the address to receive funds to.": "Select the address to receive funds to.",
+  "Send locked assets": "Send locked assets",
+  "Set as the default address": "Set as the default address",
+  "Set custom network URLs": "Set custom network URLs",
+  "Set gas and lock time": "Set gas and lock time",
+  "Set gas settings": "Set gas settings",
+  "Shortcuts": "Shortcuts",
+  "Show QR code": "Show QR code",
+  "Show advanced operations": "Show advanced operations",
+  "Smart contract": "Smart contract",
+  "Smart contracts": "Smart contracts",
+  "Swapped": "Swapped",
+  "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
+  "This address is not valid": "This address is not valid",
+  "This asset cannot have more than {{ decimals }} decimals": "This asset cannot have more than {{ decimals }} decimals",
+  "This field is required": "This field is required",
+  "This is a feature for developers only.": "This is a feature for developers only.",
+  "This is the default address": "This is the default address",
+  "This year": "This year",
+  "Time period": "Time period",
+  "Tokens": "Tokens",
+  "Too many chains in the WalletConnect proposal, expected 1, got {{ num }}": "Too many chains in the WalletConnect proposal, expected 1, got {{ num }}",
+  "Transfers": "Transfers",
+  "Type your password to export your wallet.": "Type your password to export your wallet.",
+  "Unknown token": "Unknown token",
+  "Unknown tokens": "Unknown tokens",
+  "Unlock": "Unlock",
+  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
+  "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
+  "Unlock your wallet to continue.": "Unlock your wallet to continue.",
+  "Unselect all": "Unselect all",
+  "Use optional passphrase": "Use optional passphrase",
+  "Value today": "Value today",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Wallet name updated to: {{ newWalletName }}": "Wallet name updated to: {{ newWalletName }}",
+  "Want to know more? Click here to take a look at our FAQ!": "Want to know more? Click here to take a look at our FAQ!",
+  "Welcome back.": "Welcome back.",
+  "Welcome.": "Welcome.",
+  "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
+  "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
+  "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!",
+  "You will not be able to recover your account with the private key!": "You will not be able to recover your account with the private key!",
+  "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
+  "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
+  "Your addresses": "Your addresses",
+  "and": "and",
+  "between": "between",
+  "lockTimeConfirmation": "You chose to lock the assets until <1>{{ datetime }}</1>. That is approximately <3>{{ inTimeFromNow }}</3> from now. Are you sure you want to lock the assets until then?",
+  "with": "with",
+  "{{ number }} selected": "{{ number }} selected"
 }
