--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -413,5 +413,6 @@
   "with": "avec",
   "{{ amount }} words entered": "{{ amount }} mots inscrits",
   "{{ number }} selected": "{{ number }} sélectionnés",
-  "Contact deleted": "Contact deleted"
+  "Contact deleted": "Contact deleted",
+  "Could not delete contact.": "Could not delete contact."
 }
