--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -413,5 +413,6 @@
   "lockTimeConfirmation": "You chose to lock the assets until <1>{{ datetime }}</1>. That is approximately <3>{{ inTimeFromNow }}</3> from now. Are you sure you want to lock the assets until then?",
   "with": "with",
   "{{ number }} selected": "{{ number }} selected",
-  "Contact deleted": "Contact deleted"
+  "Contact deleted": "Contact deleted",
+  "Could not delete contact.": "Could not delete contact."
 }
