Add contact delete confirmation

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -414,5 +414,6 @@
   "{{ amount }} words entered": "{{ amount }} mots inscrits",
   "{{ number }} selected": "{{ number }} sélectionnés",
   "Contact deleted": "Contact deleted",
-  "Could not delete contact.": "Could not delete contact."
+  "Could not delete contact.": "Could not delete contact.",
+  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Are you sure you want to remove \"{{ contactName }}\" from your contact list?"
 }
