--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -414,5 +414,6 @@
   "with": "with",
   "{{ number }} selected": "{{ number }} selected",
   "Contact deleted": "Contact deleted",
-  "Could not delete contact.": "Could not delete contact."
+  "Could not delete contact.": "Could not delete contact.",
+  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Are you sure you want to remove \"{{ contactName }}\" from your contact list?"
 }
