Fix Spanish translation file errors

--- a/locales/es-ES/translation.json
+++ b/locales/es-ES/translation.json
@@ -1,12 +1,12 @@
 {
-  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Por defecto, la dirección se genera en un grupo aleatorio. Puede seleccionar el grupo en el que desea que se genere la dirección mediante las opciones Avanzadas."
+  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Por defecto, la dirección se genera en un grupo aleatorio. Puede seleccionar el grupo en el que desea que se genere la dirección mediante las opciones Avanzadas.",
   "Use an existing wallet": "Utilizar una billetera existente",
-  "Please choose whether you want to create a new wallet or import an existing one.": "Por favor, elija si desea crear una nueva billetera o importar una existente".,
+  "Please choose whether you want to create a new wallet or import an existing one.": "Por favor, elija si desea crear una nueva billetera o importar una existente.",
   "New wallet": " Nueva billetera",
   "Import wallet": "Importar billetera",
   "Amount must be greater than {{ minAmountInAlph }}": "El montante debe ser superior a {{ minAmountInAlph }}",
   "Could not connect to the {{ currentNetwork }} network.": "No se ha podido conectar a la red {{ currentNetwork }}.",
-  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Tenga en cuenta que si se activa, la \"{{ address }}\ ya no será la dirección predeterminada.",
+  "Note that if activated, \"{{ address }}\" will not be the default address anymore.": "Tenga en cuenta que si se activa, la \"{{ address }}\" ya no será la dirección predeterminada.",
   "Error while sweeping address {{ from }}": "Error al barrer la dirección {{ from }}",
   "Remove wallet \"{{ walletName }}\"": "Retirar la billetera \"{{ walletName }}\"",
   "Enter password for \"{{ switchToWalletName }}\"": "Introduza a palavra-passe para \"{{ switchToWalletName }}\"",
@@ -122,7 +122,7 @@
   "Inputs": "Entradas",
   "Outputs": "Salidas",
   "New version": "Nueva versión",
-  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "La versión {{ newVersion }} está disponible. Haga clic en \"Update\" para evitar problemas con la billetera.",
+  "Version {{ newVersion }} is available. Click \"Update\" to avoid any issues with wallet.": "La versión {{ newVersion }} está disponible. Haga clic en \"Actualizar\" para evitar problemas con la billetera.",
   "Download": "Descargar",
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Por favor, asegúrese de tener su frase de recuperación guardada y almacenada en algún lugar seguro para restaurar su monedero en el futuro. Sin la frase de recuperación, tu monedero será irrecuperable y se perderá permanentemente.",
   "Not your keys, not your coins.": "No son tus llaves, no son tus monedas.",
@@ -130,7 +130,7 @@
   "Wallet": "Billetera",
   "Select a wallet": "Selecione una billetera",
   "Address details": "Detalles de la dirección",
-  "Address": "Dirección",",
+  "Address": "Dirección",
   "Number of transactions": "Número de transacciones",
   "Locked ALPH balance": "Saldo en ALPH bloqueado",
   "Total ALPH balance": "Saldo total en ALPH",
@@ -212,7 +212,7 @@
   "Reduce": "Reduzca",
   "Show addresses": "Enseñar direcciones",
   "More info": "Más información",
-  "passphraseWarningMessage": "<0>¡Esta es una función avanzada!</0><br />Utilícela sólo si sabe lo que está haciendo.<br />Lea nuestra <5>documentación</5> para saber más".,
+  "passphraseWarningMessage": "<0>¡Esta es una función avanzada!</0><br />Utilícela sólo si sabe lo que está haciendo.<br />Lea nuestra <5>documentación</5> para saber más.",
   "welcomeScreenPassphraseMessage": "Si desea utilizar una <1>frase</1>, cierre la billetera recién creada.",
   "I have read and understood the documentation": "He leído y comprendido la documentación",
   "Use optional passphrase (advanced)": "Usar frase de contraseña opcional (avanzado)",
@@ -267,7 +267,7 @@
   "Unable to convert the amount": "Incapaz de convertir el monto",
   "The amount must be greater than {{ minAmount }}": "El monto debe ser superior a {{ minAmount }}",
   "Restart the application to install the new update.": "Reinicie la aplicación para instalar la nueva actualización.",
-  "Downloaded {{ percent }}%": "{{ percent }}% descargado"
+  "Downloaded {{ percent }}%": "{{ percent }}% descargado",
   "Update": "Actualizar",
   "Download failed, try again later.": "Fallo en la descarga, inténtelo más tarde.",
   "Optional passphrase": "Frase de contraseña opcional",
