--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -415,5 +415,9 @@
   "{{ number }} selected": "{{ number }} sélectionnés",
   "Contact deleted": "Contact deleted",
   "Could not delete contact.": "Could not delete contact.",
-  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Are you sure you want to remove \"{{ contactName }}\" from your contact list?"
+  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Are you sure you want to remove \"{{ contactName }}\" from your contact list?",
+  "generateAddressInGroupMessage": "Please, <1>generate a new address</1> in this group first.",
+  "There are no addresses in the required group: {{ group }}": "There are no addresses in the required group: {{ group }}",
+  "There are no available addresses.": "There are no available addresses.",
+  "Please, generate a new address in group {{ group}} first.": "Please, generate a new address in group {{ group}} first."
 }
