--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -419,5 +419,8 @@
   "generateAddressInGroupMessage": "Please, <1>generate a new address</1> in this group first.",
   "There are no addresses in the required group: {{ group }}": "There are no addresses in the required group: {{ group }}",
   "There are no available addresses.": "There are no available addresses.",
-  "Please, generate a new address in group {{ group}} first.": "Please, generate a new address in group {{ group}} first."
+  "Please, generate a new address in group {{ group}} first.": "Please, generate a new address in group {{ group}} first.",
+  "System": "System",
+  "Light": "Light",
+  "Dark": "Dark"
 }
