Remove "download" wording from transfers page

--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -358,7 +358,7 @@
   "Address name": "Address name",
   "All selected": "All selected",
   "Analytics": "Analytics",
-  "Browse and download your transaction history. Execute new transfers easily.": "Browse and download your transaction history. Execute new transfers easily.",
+  "Browse your transaction history. Execute new transfers easily.": "Browse your transaction history. Execute new transfers easily.",
   "Bytecode": "Bytecode",
   "Confirm lock time": "Confirm lock time",
   "Connect to dApp": "Connect to dApp",
