--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -40,7 +40,7 @@
   "Assets": "Assets",
   "Available": "Available",
   "Back": "Back",
-  "Browse and download your transaction history. Execute new transfers easily.": "Browse and download your transaction history. Execute new transfers easily.",
+  "Browse your transaction history. Execute new transfers easily.": "Browse your transaction history. Execute new transfers easily.",
   "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.",
   "Bytecode": "Bytecode",
   "CONFIRM REMOVAL": "CONFIRM REMOVAL",
