--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -40,7 +40,7 @@
   "Assets": "Actifs",
   "Available": "Disponible",
   "Back": "Retour",
-  "Browse and download your transaction history. Execute new transfers easily.": "Parcourez et téléchargez votre historique de transaction. Exécutez des transfers facilement.",
+  "Browse your transaction history. Execute new transfers easily.": "Parcourez votre historique de transaction. Exécutez des transfers facilement.",
   "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Par défaut, l'adresse est générée dans un groupe aléatoire. Vous pouvez sélectionner le groupe de votre choix dans les paramètres avancés.",
   "Bytecode": "Bytecode",
   "CONFIRM REMOVAL": "CONFIRMER LA SUPPRESSION",
