--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -270,7 +270,7 @@
   "Anyone with your private keys can steal any assets held in your addresses.": "Anyone with your private keys can steal any assets held in your addresses.",
   "Asset": "Asset",
   "Assets": "Assets",
-  "Browse and download your transaction history. Execute new transfers easily.": "Browse and download your transaction history. Execute new transfers easily.",
+  "Browse your transaction history. Execute new transfers easily.": "Browse your transaction history. Execute new transfers easily.",
   "Bytecode": "Bytecode",
   "Change wallet name": "Change wallet name",
   "Choose a contact": "Choose a contact",
